[package]
name = "rust-lesson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "activity"
path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.22"
thiserror = "1.0.34"
crossbeam-channel = "*"
parking_lot = "0.12.1"